test/scc/decl/semantic-errors/047.a
047.t:1:21: error: 'inline' specifier allowed on function declarations only